2001-01-16	Joel Sherrill <joel@OARcorp.com>

	* Added task-based timers to the Timer Manager.  This added three
	new directives: 
	    - rtems_timer_initiate_server
	    - rtems_timer_server_fire_after
	    - rtems_timer_server_fire_when
	In the process of doing this, a number of cleanups were made.
	* src/timerserver.c, src/timerserverfireafter.c,
	src/timerserverfirewhen.c: New files.
	* include/timer/timer.h: Added new prototypes and supporting types.
	* inline/rtems/rtems/timer.h, macros/rtems/rtems/timer.h: Enhanced
	_Timer_Is_interval_class() to cover the class TIMER_INTERVAL_ON_TASK.
	* src/Makefile.am: Accounted for new files.
	* src/rtemstimer.c: Added initialization of _Timer_Server variable.
	* src/timercancel.c, src/timerreset.c: Account for addition
	of timer classes.  Also corrected the headers.
	* src/timercreate.c, src/timerdelete.c, src/timerfireafter.c, 
	src/timerfireafter.c, src/timerident.c: Corrected header.

2001-01-16	Joel Sherrill <joel@OARcorp.com>

	* src/taskmode.c: Ensure the this service does not dispatch before
	tasking is enabled at initialization time.

2002-01-07	Joel Sherrill <joel@OARcorp.com>

	* optman/, optman/.cvsignore, optman/Makefile.am, optman/no-dpmem.c,
	optman/no-event.c, optman/no-mp.c, optman/no-msg.c, optman/no-part.c,
	optman/no-region.c, optman/no-rtmon.c, optman/no-sem.c,
	optman/no-signal.c, optman/no-timer.c: Removed entire contents of
	optman/ directory since it has been moved.

2001-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Add multilib support.
	* optman/Makefile.am: Add multilib support.

2001-10-23	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/rtems/asr.nil: Fixed typo.

2001-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* macros/Makefile.am: Replace INLINES w/ MACROS (Fix stupid typo in
	previous patch).

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/Makefile.am: Remove.
	* include/rtems/rtems/Makefile.am: Remove.