@@ -22,6 +22,7 @@
 #include <rtems/score/watchdog.h>
 
 #include <rtems/rtems/tasks.h>
+#include <rtems/rtems/support.h>
 #include <rtems/score/thread.h>
 
 /*
@@ -181,7 +182,7 @@ rtems_status_code rtems_timer_initiate_server(
    */
 
   status = rtems_task_create(
-    0x4954454d,           /* "TIME" */
+    rtems_build_name( 'T', 'I', 'M', 'E' ),
     1,                    /* create with priority 1 since 0 is illegal */
     stack_size,           /* let user specify stack size */
     RTEMS_NO_PREEMPT,     /* no preempt is like an interrupt */
